# opsbox

./: .gitignore  README.md  pyproject.toml
opsbox/: cli.py
opsbox.egg-info/: PKG-INFO  SOURCES.txt
